runtime/tests/cases/variables/errors/extern_assignment.bobbin
extern gold

You have {gold} gold.
set gold = 100
